# OpenTimelineIO-JS-Bindings

./: .clang-format  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc  CMakeLists.txt  Makefile  README.md  index.html  jest.config.js  jsconfig.json  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yaml  tests.yaml
scripts/: merge_dts.ts
src/: CMakeLists.txt  common_utils.h  errorStatusHandler.cpp  errorStatusHandler.h  exceptions.h  pre.cpp  pre.d.ts  pre.js
src/opentime/: bindings.cpp  lib.cpp
src/opentimelineio/: anyDictionary.cpp  anyVector.cpp  bindings.cpp  errorStatusHandler.cpp  errorStatusHandler.h  imath.cpp  js_any.cpp  js_any.h  js_anyDictionary.h  js_anyVector.h  js_optional.h  lib.cpp  utils.cpp  utils.h
tests/: opentimelineio.test.js  rationaltime.test.js
tests/opentimelineio/: clip.test.js  composable.test.js  item.test.js  marker.test.js  serializable_collection.test.js  serializable_object.test.js
